Fix #9960 with NPE protection for bad requests.
Fix #9960 with NPE protection for bad requests.